Created Form1; Edited settings, style.css and Form2

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -4,6 +4,7 @@ unique_ids:
     style.css: '1741940410318182135406336.4764'
     theme.css: 6G44GIEQQRJLILWU6GQSQO5BTDFT5ZI3
   forms:
+    Form1: '1741936071107715179736113.4705'
     Form2: '1741936740174763537894893.3063'
     Form2.ItemTemplate1: '1741937402908705161263988.0319'
   modules: {}
