--- a/client_code/Form2/form_template.yaml
+++ b/client_code/Form2/form_template.yaml
@@ -1,4 +1,9 @@
 components_by_slot:
+  content:
+  - layout_properties: {}
+    name: heading_1
+    properties: {text: RevnTech Tuning Software}
+    type: form:dep_lin1x4oec0ytd:_Components.Heading
   navigation:
   - data_bindings: []
     event_bindings: {click: breadcrumbs_button_click, show: breadcrumbs_button_click}
@@ -19,10 +24,19 @@ components_by_slot:
       properties: {height: 148, source: _/theme/main-logo.png}
       type: Image
     - components:
+      - layout_properties: {slot: card-content-slot}
+        name: card_content_container_3
+        properties: {}
+        type: form:dep_lin1x4oec0ytd:_Components.Card.CardContentContainer
+      layout_properties: {slot: card-content-slot}
+      name: interactive_card_1
+      properties: {}
+      type: form:dep_lin1x4oec0ytd:_Components.InteractiveCard
+    - components:
       - components:
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy
+          name: home_dropdown
           properties:
             appearance: filled
             border_color: '111'
@@ -33,7 +47,7 @@ components_by_slot:
           type: form:dep_lin1x4oec0ytd:_Components.DropdownMenu
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy_copy
+          name: ecu_dropdown
           properties:
             appearance: filled
             icon: mi:device_hub
@@ -43,7 +57,7 @@ components_by_slot:
           type: form:dep_lin1x4oec0ytd:_Components.DropdownMenu
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy_copy_copy
+          name: tuning_maps_dropdown
           properties:
             appearance: filled
             icon: mi:tune
@@ -53,7 +67,7 @@ components_by_slot:
           type: form:dep_lin1x4oec0ytd:_Components.DropdownMenu
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy_copy_copy_copy
+          name: hex_dropdown
           properties:
             appearance: filled
             icon: mi:hexagon
@@ -63,7 +77,7 @@ components_by_slot:
           type: form:dep_lin1x4oec0ytd:_Components.DropdownMenu
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy_copy_copy_copy_copy
+          name: checksum_dropdown
           properties:
             appearance: filled
             icon: mi:planner_review
@@ -73,7 +87,7 @@ components_by_slot:
           type: form:dep_lin1x4oec0ytd:_Components.DropdownMenu
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy_copy_copy_copy_copy_copy
+          name: live_data_dropdown
           properties:
             appearance: filled
             icon: mi:nest_clock_farsight_analog
@@ -83,7 +97,7 @@ components_by_slot:
           type: form:dep_lin1x4oec0ytd:_Components.DropdownMenu
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy_copy_copy_copy_copy_copy_copy_copy
+          name: diagnostics_dropdown
           properties:
             appearance: filled
             icon: mi:diagnosis
@@ -93,7 +107,7 @@ components_by_slot:
           type: form:dep_lin1x4oec0ytd:_Components.DropdownMenu
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy_copy_copy_copy_copy_copy_copy
+          name: settings_dropdown
           properties:
             appearance: filled
             icon: mi:settings
@@ -101,9 +115,13 @@ components_by_slot:
             label: Settings
             margin: ['0', null, '0', null]
           type: form:dep_lin1x4oec0ytd:_Components.DropdownMenu
+        - layout_properties: {slot: card-content-container-slot}
+          name: navigation_link_1
+          properties: {}
+          type: form:dep_lin1x4oec0ytd:_Components.NavigationLink
         - data_bindings: []
           layout_properties: {slot: card-content-container-slot}
-          name: dropdown_menu_1_copy_copy_copy_copy_copy_copy_copy_copy_2
+          name: help_dropdown
           properties:
             appearance: filled
             icon: mi:help
